--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
 
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-feature android:name="android.hardware.camera" />
-
+    <uses-feature android:name="android.hardware.camera.external"/>
     <uses-permission android:name="android.permission.USB_PERMISSION" />
 
     <application
